@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2013 - TortoiseSVN
+// Copyright (C) 2003-2014 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -598,6 +598,7 @@ public:
         CSVNStatusListCtrl * control;
         int sortedColumn;
         bool ascending;
+        bool s_bSortLogical;
     };
 
     /**
